Remove JaxRS dependencies